Fix round-robin spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -54,7 +54,7 @@ h1 {
 }
 
 h2 {
-  font-size: 23px;
+  font-size: 21px;
 }
 
 h3 {
@@ -75,11 +75,11 @@ h3 {
     }
 
     h2 {
-      margin-bottom: 25px;
+      margin: 0px 0 25px 0;
     }
 
     table {
-      margin-top: 25px;
+      margin: 30px 0 20px 0;
       color: #a7a7a7;
       border-collapse: collapse;
     }
